--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=AnimalSpring
-animal.cat.names=????,?????,?????,?????,?????,??????,??????,????,????,??????
+animal.cat.names=Archie,Bimbo,Chip,Dingo,Elliot,Flash,Hazel,Iron,Jake,Lark
